--- a/styles.css
+++ b/styles.css
@@ -34,13 +34,13 @@ body {
 #navbar {
 	display: flex;
 	justify-content: center;
-	gap: 2rem;
+	padding-inline: 0.5rem;
 	
 	width: fit-content;
 	margin: auto;
 	border-radius: 1rem;
+	overflow: hidden;
 
-	padding: 1rem;
 	background-color: rgba(25, 25, 25, 0.5);
 	backdrop-filter: blur(10px);
 
@@ -49,6 +49,19 @@ body {
 
 	a {
 		text-decoration: none;
+		padding: 1rem;
+
+		background-image: linear-gradient(to right, rgb(255, 150, 100), rgb(255, 200, 100) 100%);
+		background-repeat: no-repeat;
+		background-position: bottom;
+		background-size: 0% 3px;
+
+		transition: 150ms;
+	}
+
+	a:hover {
+		background-size: 100% 3px;
+		
 	}
 }
 
