--- a/styles.css
+++ b/styles.css
@@ -2,14 +2,15 @@
 
 :root {
 	scroll-behavior: smooth;
+	user-select: none;
 
 	/* colors */
 
 	--accent: rgb(123, 105, 89);
+	--container: hsl(30, 9%, 9%);
 
-	/* values */
-
-	--grid-overflow: 300px;
+	--gradient-start: rgb(255, 100, 100);
+	--gradient-stop: rgb(255, 255, 100);
 }
 
 * {
@@ -20,8 +21,18 @@
 	margin: 0;
 }
 
-svg {
-	aspect-ratio: 1;
+::placeholder {
+	color: var(--accent);
+}
+
+/* scrollbars */
+
+::-webkit-scrollbar {
+	background: black;
+}
+
+::-webkit-scrollbar-thumb {
+	background: hsl(30, 9%, 11%);
 }
 
 /* main */
@@ -34,13 +45,13 @@ body {
 
 #navbar {
 	display: flex;
-	justify-content: center;
-	padding-inline: 0.5rem;
+	flex-wrap: wrap;
+	justify-content: start;
 	
-	width: fit-content;
+	padding-inline: 0.5rem;
 	margin: auto;
+	width: fit-content;
 	border-radius: 1rem;
-	overflow: hidden;
 
 	background-color: rgba(25, 25, 25, 0.5);
 	backdrop-filter: blur(10px);
@@ -48,38 +59,37 @@ body {
 	position: sticky;
 	top: 1rem;
 	bottom: 1rem;
-
 	z-index: 99;
 
 	a {
 		text-decoration: none;
 		padding: 1rem;
 
-		background-image: linear-gradient(to right, rgb(255, 150, 100), rgb(255, 200, 100) 100%);
+		background-image: linear-gradient(5deg, var(--gradient-start), var(--gradient-stop));
 		background-repeat: no-repeat;
 		background-position: bottom;
 		background-size: 0% 3px;
 
-		transition: 150ms;
+		transition: background-size 150ms;
 	}
 
 	a:hover {
 		background-size: 100% 3px;
-		
 	}
 }
 
 /* main heading and information */
 
 #self-info {
+	padding-block: 5rem;
 	text-align: center;
 }
 
 #hero-text {
-	font-size: 5rem;
+	font-size: 7vw;
 
-	margin-top: 7rem;
-	margin-bottom: 1rem;
+	margin-block: 2rem;
+	margin-top: 4rem;
 
 	background-image: linear-gradient(to right, rgb(255, 100, 100) 0%, rgb(255, 255, 100) 100%);
 	background-clip: text;
@@ -90,12 +100,14 @@ body {
 
 #skills-container {
 	height: 8rem;
-	margin: 8rem;
-	padding: 2rem;
+	margin: 5rem 10vw;
+	padding-block: 2rem;
 
 	display: flex;
 	justify-content: center;
 	gap: 1rem;
+
+	overflow-x: auto;
 
 	border-block: 3px solid hsl(30, 9%, 9%);
 }
@@ -113,7 +125,8 @@ body {
 	border: 3px solid hsl(30, 9%, 9%);
 
 	svg {
-		height: 100%;
+		height: 1.5rem;
+		width: 1.5rem;
 	}
 }
 
@@ -123,22 +136,22 @@ body {
 	text-align: center;
 	padding: 5rem;
 	font-size: 3rem;
-	font-weight: 500;
+	font-weight: 400;
 }
 
 /* projects */
 
 #projects-container {
 	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+	grid-template-columns: repeat(auto-fit, minmax(35vw, 1fr));
 
-	padding-inline: 10%;
-	gap: 10%;
+	padding-inline: 10vw;
+	gap: 6rem;
 }
 
 .project {
 	padding: 2rem;
-	background-color: hsl(30, 9%, 9%);
+	background-color: var(--container);
 
 	display: flex;
 	flex-direction: column;
@@ -146,7 +159,6 @@ body {
 
 	img {
 		width: 100%;
-		aspect-ratio: calc(16 / 9);
 		object-fit: cover;
 	}
 }
@@ -186,7 +198,6 @@ body {
 .project-tools {
 	display: flex;
 	flex-wrap: wrap;
-
 	gap: 0.5rem;
 
 	p {
@@ -201,10 +212,55 @@ body {
 
 #about-container {
 	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+	grid-template-columns: repeat(auto-fit, minmax(35vw, 1fr));
 
-	padding-inline: 2rem;
-	gap: 2rem;
+	padding-inline: 4rem;
+	gap: 4rem;
+}
+
+/* contact */
+
+#contact-container {
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(35vw, 1fr));
+
+	padding-inline: 5rem;
+	gap: 5rem;
+}
+
+#contact-form {
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	gap: 1rem;
+}
+
+.input-section {
+	display: flex;
+	flex-direction: column;
+	gap: 0.5rem;
+
+	> textarea {
+		resize: none;
+		height: 10rem;
+
+		clip-path: inset(0 round 0.5rem);
+	}
+}
+
+.contact-input {
+	display: block;
+	width: 100%;
+	
+	background-color: var(--container);
+	border-radius: 0.5rem;
+	border: none;
+	
+	padding: 1rem;
+
+	&:focus {
+		outline: 2px solid var(--accent);
+		outline-offset: -2px;
+	}
 }
 
 /* footer */
@@ -215,8 +271,14 @@ footer {
 
 	background-color: black;
 
+	margin-top: 5rem;
 	padding: 5rem;
 	gap: 5rem;
+
+	a {
+		display: block;
+		text-underline-offset: 2px;
+	}
 }
 
 .footer-section {
@@ -239,6 +301,6 @@ footer {
 
 	svg {
 		fill: var(--accent);
-		height: 50px;
+		height: 2rem;
 	}
 }
