--- a/styles.css
+++ b/styles.css
@@ -152,6 +152,7 @@ body {
 .project {
 	padding: 2rem;
 	background-color: var(--container);
+	border-radius: 1rem;
 
 	display: flex;
 	flex-direction: column;
@@ -160,6 +161,7 @@ body {
 	img {
 		width: 100%;
 		object-fit: cover;
+		border-radius: 0.5rem;
 	}
 }
 
@@ -169,16 +171,20 @@ body {
 			content: "";
 
 			position: absolute;
-			width: 25px;
-			height: 25px;
+			width: 35px;
+			height: 35px;
 
 			margin: 0.5rem;
+			border-radius: 4px;
 
 			background-image: url(images/external-link.png);
-			background-size: contain;
+			background-size: 75%;
 			background-position: center;
 			background-repeat: no-repeat;
+			background-color: black;
 		}
+
+		filter: brightness(0.7);
 	}
 
 	transition: 200ms;
